Menambahkan html menu dengan animasi css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -20,6 +21,15 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">Projects</a></li>
         </ul>
+
+        <div class="menu-toggle">
+            <!-- Cara Mengakali Click Event pada Toggle tanpa JS -->
+            <input type="checkbox" name="" id="">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
     </nav>
 
 </body>
