--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="logo">
             <h3>MasikDev</h3>
         </div>
+
         <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -32,6 +33,7 @@
 
     </nav>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
